feat: typo, moved alarm box from bp to htctrr

--- a/docs/50_data_publication/00_data_publication.mdx
+++ b/docs/50_data_publication/00_data_publication.mdx
@@ -16,7 +16,7 @@ This article applies to all researchers who want to publish their data.
 
 In chemical research, we strive to share results with others, commonly through articles in renowned scientific journals. To be able to actually work with and build upon these results, the scientific community also requires the data that the results were based on. 
 
-Publishing and therefore sharing these chemistry research data in a [FAIR](/docs/fair) manner by considering aspects such as [persistent identifiers](/docs/pid/), rich [metadata](/docs/metadata), [provenance information](/docs/provenance/), [data formats standards](/docs/format_standards) for analytical data, information on the [license](/docs/licenses/) applied, and and by providing [machine-readable chemical structures](/docs/machine-readable_chemical_structures) adds value to the research results and enables discovery and reuse. 
+Publishing and therefore sharing these chemistry research data in a [FAIR](/docs/fair) manner by considering aspects such as [persistent identifiers](/docs/pid/), rich [metadata](/docs/metadata), [provenance information](/docs/provenance/), [data formats standards](/docs/format_standards) for analytical data, information on the [license](/docs/licenses/) applied, and by providing [machine-readable chemical structures](/docs/machine-readable_chemical_structures) adds value to the research results and enables discovery and reuse. 
 
 Data publication is essential in ensuring findings are transparent and reproducible. Moreover, it prevents duplicate efforts to generate data, hence, data publication is also a measure of sustainability.
 
