--- a/docs/50_data_publication/10_repositories.mdx
+++ b/docs/50_data_publication/10_repositories.mdx
@@ -35,7 +35,7 @@ Repositories can also be certified (e.g. CoreTrustSeal). Such certification ensu
 
 Because of the multitudes of data repositories existing, users could better orient themselves using a research data repository registry such as [Re3data](https://www.re3data.org/), [OpenDOAR](https://v2.sherpa.ac.uk/opendoar/about.html), [ROAR](http://roar.eprints.org/) and [FAIRsharing](https://fairsharing.org/). Repository registry services are an essential component of the [FAIR Data Principles](/docs/fair) as they should help researchers to navigate through thousands of data repository services to find the most appropriate repository for their data. 
 
-However, due to complex landscape of existing repositories, these registries tend to provide confusingly long lists that do not necessarily facilitate the selection of a suitable repository. Moreover, researchers should take the reuse policy, metadata sharing and availability, long-term availability of data and public accessibility of a repository into account, which is often not obvious or easy to find out.
+However, due to complex landscape of existing repositories, these registries tend to provide confusingly long lists that do not necessarily facilitate the selection of a suitable repository. Moreover, researchers should take the reuse policy, metadata sharing and availability, long-term availability of data, and public accessibility of a repository into account, which is often not obvious or easy to find out.
 
 :::info Info:
 To ease the selection of a suitable research data repository for chemistry research data, NFDI4Chem provides a lists of trusted, chemistry-friendly repositories in the guide on [how to choose the right repository](/docs/choose_repository).
