--- a/docs/50_data_publication/20_choose_repository.mdx
+++ b/docs/50_data_publication/20_choose_repository.mdx
@@ -19,6 +19,10 @@ The consortium for chemistry (NFDI4Chem) in the NFDI aims to support the researc
 
 The repositories that fulfil the above mentioned criteria are reported in the following list as **core repositories**. In case that not all criteria are fulfilled they are included as associated or relevant trusted, chemistry-friendly repositories.
 
+:::danger Notice:
+Field-specific repositories should be the first choice as these repositories enhance the FAIRness of data on behalf of the submitters. To retain the same level of FAIRness, data publication in generic repositories requires manual FAIRification.
+:::
+
 ## Core repositories
 
 - [Chemotion Repository](https://www.chemotion-repository.net/welcome)<br/>Field-specific sample and reaction centric repository including analysis data such as NMR, IR and mass data.
