--- a/docs/50_data_publication/25_best_practice.mdx
+++ b/docs/50_data_publication/25_best_practice.mdx
@@ -9,13 +9,9 @@ import useBaseUrl from '@docusaurus/useBaseUrl';
 
 ## Introduction
 
-All scientists generate scientific data independently of whether they are working practically or theoretically, and produce data such as protocols, analytical data, or data from calculations. These data can be [domain-specific](/docs/domain_guide) and should always be accompanied by [metadata](/docs/metadata) that fully describe the data.
+<!--- All scientists generate scientific data independently of whether they are working practically or theoretically, and produce data such as protocols, analytical data, or data from calculations. These data can be [domain-specific](/docs/domain_guide) and should always be accompanied by [metadata](/docs/metadata) that fully describe the data. --->
 
 On this page, we provide best practices for data publication in field-specific as well as generic research data repositories, while best practices for Chemotion Repository are provided on a separate page about [Chemotion Repository](/docs/chemotion_repo). Additionally, we include best practices on special aspects, such as how to use PIDs of datasets in academic publishing.
-
-:::danger Notice:
-Field-specific repositories should be the first choice as these repositories enhance the FAIRness of data on behalf of the submitters. To retain the same level of FAIRness, data publication in generic repositories requires manual FAIRification.
-:::
 
 ## How to use dataset PIDs in publications
 
