feat: linked lbe to bp example

--- a/docs/50_data_publication/25_best_practice.mdx
+++ b/docs/50_data_publication/25_best_practice.mdx
@@ -39,9 +39,7 @@ Additionally, Chemotion Repository is connected to other databases (e.g. [PubChe
 For a better understanding of how data publications are linked to related journal publications, the following examples including their data (open-access) can be viewed:
 
 - [Modular Synthesis of New Pyrroloquinoline Quinone Derivatives](/docs/datasets/?doi=10.1055/s-0041-1738426)
-- [Modular Synthesis of trans‐A2B2‐Porphyrins with Terminal Esters: Systematically Extending the Scope of Linear Linkers for Porphyrin‐Based MOFs](https://doi.org/10.1002/chem.202003885)
-
-
+- [Modular Synthesis of trans‐A2B2‐Porphyrins with Terminal Esters: Systematically Extending the Scope of Linear Linkers for Porphyrin‐Based MOFs](/docs/datasets/?doi=10.1002/chem.202003885)
 
 - [Next Generation of Zinc Bisguanidine Polymerization Catalysts towards Highly Crystalline, Biodegradable Polyesters](https://doi.org/10.1002/anie.202008473)
 - [Synthesis of new pyrazolo[1,2,3]triazines by cyclative cleavage of pyrazolyltriazenes](https://doi.org/10.3762/bjoc.17.187)
