--- a/docs/40_smartlab/00_smartlab.mdx
+++ b/docs/40_smartlab/00_smartlab.mdx
@@ -24,7 +24,7 @@ Over the past years, many new digital tools have been developed to support resea
 
 Researchers can perform their daily work in a single digital environment. Nevertheless, they may also chose other software to process analytical data and add this information to the corresponding ELN entry. If the ELN used is directly connected to a [repository](/docs/repositories), the structured data obtained can be directly transferred to a repository. This greatly eases [data publication](/docs/data_publication) and could also make the use of supplemental material, typically submitted as a PDF, obsolete in the near future.
 
-Generally, selecting an ELN and a repository—generic or field-specific—depends on the [chemical sub-domain](/docs/domain_guide). The combination of both enables effective [data storage and archiving](/docs/data_storage) in terms of internal databases and data publications for advanced collaboration and data reuse, and fulfils the data handling practices of the [data life cycle](/docs/data_life_cycle). Moreover, the storage of research data according to the FAIR principles is crucial for upcoming machine learning approaches or big data analyses. --->
+Generally, selecting an ELN and a repository—generic or field-specific—depends on the [chemical sub-domain](/docs/domain_guide). The combination of both enables effective [data storage and archiving](/docs/data_storage) in terms of internal databases and data publications for advanced collaboration and data reuse, and fulfils the data handling practices of the [data life cycle](/docs/data_life_cycle). Moreover, the storage of research data according to the FAIR principles is crucial for upcoming machine learning approaches or big data analyses. Comment Ti: Copied over from old bp article. --->
 
 ## Get started:
 
