--- a/docs/40_smartlab/20_chemotion_eln.mdx
+++ b/docs/40_smartlab/20_chemotion_eln.mdx
@@ -16,7 +16,7 @@ Chemotion is the ELN reference instance in NFDI4Chem. The Chemotion ELN is devel
 
 The Chemotion ELN was designed for chemists and adapted to the special requirements of chemical laboratory work and documentation. It therefore serves as a digitalization instrument for work in chemistry, developed to overcome the current limitations of the existing systems. To reach this goal, the development, improvement, and extension of the ELN is a community effort. The ELN is also used in other disciplines beyond chemistry as it offers a broad generic functionality to meet the needs of scientists working in interdisciplinary environments. These generic functions are still being extended and adapted.
 
-Chemotion ELN offers a specific function that facilitates the [publication of research data](/docs/data_publication): it supports the transfer of data from a user's ELN account to a research data repository. This function reduces the scientists' effort in allowing access to research data, which is required by many funding agencies and helpful for the publication of scientific text publications. Currently, the ELN supports the transfer of data to the [Chemotion repository](https://www.chemotion-repository.net/welcome). The NFDI4Chem team is working on establishing connections to further repositories, in particular, the repositories supported and recommended by NFDI4Chem.
+Chemotion ELN offers a specific function that facilitates the [publication of research data](/docs/data_publication): it supports the transfer of data from a user's ELN account to a research data repository. This function reduces the scientists' effort in allowing access to research data, which is required by many funding agencies and helpful for the publication of scientific text publications. Currently, the ELN supports the transfer of data to the [Chemotion repository](https://www.chemotion-repository.net/welcome). Additionally, Chemotion Repository is connected to other databases (e.g. [PubChem](https://pubchem.ncbi.nlm.nih.gov/)) and repositories (e.g. [NMRShiftDB2](https://nmrshiftdb.nmr.uni-koeln.de/), soon to be superseded by [nmrXiv](https://nmrxiv.org/)), to ensure best visibility and a user-friendly search of original research data. The NFDI4Chem team is working on establishing connections to further repositories, in particular, the repositories supported and recommended by NFDI4Chem.
 
 A short introduction to the Chemotion ELN as well as the connection to the Chemotion repository is demonstrated in this video:
 <iframe width="860" height="370" src="https://www.youtube.com/embed/tZHaP6DW-Dw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
