--- a/docs/50_data_publication/25_best_practice.mdx
+++ b/docs/50_data_publication/25_best_practice.mdx
@@ -9,9 +9,9 @@ import useBaseUrl from '@docusaurus/useBaseUrl';
 
 ## Introduction
 
-On this page, we provide best practices for data publication in field-specific as well as generic research data repositories, while best practices for Chemotion Repository are provided on a separate page about [Chemotion Repository](/docs/chemotion_repo). Additionally, we include best practices on special aspects, such as how to use PIDs of datasets in academic publishing.
+On this page, we provide best practices for data publication in field-specific as well as generic research data repositories. Additionally, we include best practices on special aspects, such as how to use PIDs of datasets in academic publishing.
 
-## How to use dataset PIDs in publications
+## How to use dataset PIDs in scientific articles
 
 During deposition of research data, a [persistent identifier](/docs/pid) is assigned to the data. Authors should use PIDs in their article for interlinking in two main ways:
 
@@ -22,32 +22,34 @@ During deposition of research data, a [persistent identifier](/docs/pid) is assi
 This distinction is important, because the link to the dataset in the DOI metadata of scientific articles is differently set, depending on whether the dataset is a directly related source of information or a referenced source of other researchers and its information is reused.
 :::
 
+For at set of reactions, samples, analyses, to assemble a study, Collection PIDs should be used rather than providing many separate PIDs. Such a study wrapped with a Collection PID can directly correspond to a published scientific article and be referenced in a bundled manner within the data availability statement or references section.
+
 In addition, the PID of a related dataset could also be mentioned in the supplementary PDF, if such a document is generated.
 
 ## Best practices for field-specific repositories
 
-For field-specific repositories such as [Chemotion Repository](/docs/choose_repository/#chemotion-repository---repository-for-molecules-and-research-data) in combination with [Chemotion ELN](/docs/chemotion_eln), the data is collected along the scientific workflows, analytical data files are automatically converted to open formats, controlled vocabularies or ontologies are used to describe data, and analysis data is interconnected to reactions and samples, hence, chemical structures. The entire Chemotion package allows researchers to collect, analyse, process, store, and publish various types of analytical data attached to reactions and samples in one digital environment. ring the seamless export from the ELN into the repository, [persistent identifiers (DOIs)](/docs/pid) are assigned to the deposited data. Chemotion Repository [provides](https://www.chemotion.net/docs/repo/doi) DOIs for reactions, samples and analysis data. 
+For field-specific repositories such as [Chemotion Repository](/docs/choose_repository/#chemotion-repository---repository-for-molecules-and-research-data) in combination with [Chemotion ELN](/docs/chemotion_eln), the data is collected along the scientific workflows, analytical data files are automatically converted to open formats, controlled vocabularies or ontologies are used to describe data, and analysis data is interconnected to reactions and samples, hence, chemical structures. The entire Chemotion package allows researchers to collect, analyse, process, store, and publish various types of analytical data attached to reactions and samples in one digital environment. FAIRification of data is mainly handled Chemotion. During the seamless export from the ELN into the repository, [persistent identifiers (DOIs)](/docs/pid) are assigned to the deposited data. Chemotion Repository [provides](https://www.chemotion.net/docs/repo/doi) DOIs for reactions, samples and analysis data. 
 
-Other field-specific repositories such as [CSD and ICSD](/docs/choose_repository/#csd-icsd---joint-ccdcfiz-access-structures-service), [Strenda DB](/docs/choose_repository/#strenda-db---repository-for-reporting-rnzymology-data), [SupraBank](/docs/choose_repository/#suprabank), and [NOMAD](/docs/choose_repository/#nomad) 
+Other field-specific repositories such as [CSD and ICSD](/docs/choose_repository/#csd-icsd---joint-ccdcfiz-access-structures-service), [Strenda DB](/docs/choose_repository/#strenda-db---repository-for-reporting-rnzymology-data), [SupraBank](/docs/choose_repository/#suprabank), [NOMAD](/docs/choose_repository/#nomad), and [Chemotion Repository](/docs/choose_repository/#chemotion-repository---repository-for-molecules-and-research-data), if used independently from Chemotion ELN, offer build in aggregation of structured along the submission workflows and alined with the [FAIR data principles](/docs/fair). This greatly eases [data publication](/docs/data_publication).
 
-Moreover, Collection DOIs can be assigned for a set of reactions, samples, and analyses to assemble a study. This study can then directly correspond to a published scientific article and be referenced in a bundled manner within the data availability statement.
+Further aspects to consider are to provide rich metadata, which could be [Domain-independent](/docs/metadata/#domain-independent-metadata) metadata or [domain-specific](/docs/metadata/#domain-specific-metadata) metadata and should also include [provenance information](/docs/provenance), which previously would have typically been included in the supplemental PDF section on general information and protocols [Minimum information requirements](/docs/metadata/#minimum-information-standards-mi) as set by the chemistry community and followed in manuscripts and previously also in supplementary PDFs should be included.   
+
+:::danger Notice:
+Are you asking yourself right now, "That's it?" Yes, that's it! As mentioned above, field specific repositories carry out much of the heavy lifting when it comes to FAIRification, while the digital smart lab environment even collects structured data directly along the scientific workflow.
+:::
 
 ### Best practice examples
 
 For a better understanding of how data publications are linked to related journal publications, the following examples including their data (open-access) can be viewed:
 
-- [Modular Synthesis of New Pyrroloquinoline Quinone Derivatives](/docs/datasets/?doi=10.1055/s-0041-1738426)
-- [Modular Synthesis of trans‐A2B2‐Porphyrins with Terminal Esters: Systematically Extending the Scope of Linear Linkers for Porphyrin‐Based MOFs](/docs/datasets/?doi=10.1002/chem.202003885)
-
-:::danger Notice:
-Are you asking yourself right now, "That's it?" Yes, that's it! As mentioned above, field specific repositories carry out much of the heavy lifting when it comes to FAIRification, while the digital smart lab environment collects structured data directly along the scientific workflow.
-:::
+- in Chemotion Repository: [Modular Synthesis of New Pyrroloquinoline Quinone Derivatives](/docs/datasets/?doi=10.1055/s-0041-1738426)
+- in Chemotion Repository and CSD: [Modular Synthesis of trans‐A2B2‐Porphyrins with Terminal Esters: Systematically Extending the Scope of Linear Linkers for Porphyrin‐Based MOFs](/docs/datasets/?doi=10.1002/chem.202003885)
 
 ## Best practices for generic repositories
 
 While field-specific repositories provide significant support for the [FAIRification](/docs/fair) of data along the entire [data life cycle](/docs/data_life_cycle), the preparation of datasets for data publication in generic repositories occurs at the disclosure and publication stage, as long as no (institutional) RDM workflows streamline data publication. Ususally, data is gathered contemporaneous with the preparation of a corresponding manuscript, hence, datasets which are planned to be published with a generic repository require manual [FAIRification](/docs/fair) prior upload and publishing.
 
-To start, all data to be published is collected and ordered in a logical folder structure, e.g. a folder for NMR and another folder for MS data (figure 1). Nested folder structures should be avoided and aspects of [data organisation](/docs/data_organisation), such as file naming, should be taken into account. Researchers should aim for a data package which is as self-explanatory as the supplemental PDFs, they have previously published along scientific articles.
+To start, all data to be published is collected and ordered in a logical folder structure, e.g. a folder for NMR and another folder for MS data (figure 1). Nested folder structures should be avoided and aspects of [data organisation](/docs/data_organisation), such as file naming, should be taken into account. Researchers should aim for a data package which is as self-explanatory as the supplemental PDFs, they have previously published along scientific articles. 
 
 <img align="center" src={useBaseUrl('/img/data_pub/best_practice_generic_folders_content.png')} alt="" width="100%" />
 
@@ -59,7 +61,7 @@ For further aspects to consider, we provide a non-exhaustive list of generic bes
 - **Data should be linked to chemical structures and reactions.**<br/>As analytical data are usually named following lab journal entries, the dataset must include a description of which data correspond to which sample, molecule, or experiment. This should be included in the format used for analytical data. Another solution on that is to provide a [supplementary table](/docs/machine-readable_chemical_structures/#provide-machine-readable-data-as-supplementary-table) (figure 1) within the data package, which should include InChI structure identifiers and SMILES structure codes and additional information such as RInChI reaction identifiers. Second-tier, chemical structures might also be added and represented as [CT files](/docs//ct_files) such as mol or SDfiles (figure 1). [RXNfiles](/docs//ct_files) may be used to describe chemical reactions in a machine readable way.
 - **Datasets should include scripts and workflows and information on software used.**<br/>Workflows, i.e. scripts used for data processing and input parameters, also for semi-automatic scripts, should be included. The metadata of the whole dataset should describe the language and version of scripts used as well as other software applied. Best practice is not only to include the code but to add notebooks such as R Notebooks or Jupyther notebooks.
 - **Data should be described with metadata and minimum information standards should be followed.**<br/>[Domain-independent](/docs/metadata/#domain-independent-metadata) metadata, via the repositories metadata editor, should be provided. Additionally, [domain-specific](/docs/metadata/#domain-specific-metadata) metadata should be published via the metadata editor, if supported by the repository of choice, within the analytical data or an additional README file. [Minimum information requirements](/docs/metadata/#minimum-information-standards-mi) as set by the chemistry community and followed in manuscripts and previously also in supplementary PDFs should be included.   
-- **The provenance information of data should be included.**<br/>Part of that [provenance information](/docs/provenance) is part of the dataset's metadata and should be added via the metadata editor of the repository. All information which previously would have typically been included in the supplemental PDF section on general information and reaction protocolls, e.g. information on methods and instruments used, are provenance information and should be added to a README file, as long as no domain-specific metadata schema is available. This README could be a text file, or written in Markdown, while also providing a human-readable rendered representation as HTML.
+- **The provenance information of data should be included.**<br/>Part of that [provenance information](/docs/provenance) is part of the dataset's metadata and should be added via the metadata editor of the repository. All information which previously would have typically been included in the supplemental PDF section on general information and reaction protocols, e.g. information on methods and instruments used, are provenance information and should be added to a README file, as long as no domain-specific metadata schema is available. This README could be a text file, or written in Markdown, while also providing a human-readable rendered representation as HTML.
 
 :::danger Notice:
 Does that sound like a lot of manual work? Avoid extra work by using a [smart lab](/docs/smartlab) digital environments for collecting, processing, analysing and publishing research data, such as [Chemotion](/docs/chemotion_eln)! Plus, you may omit the preparation of supplementary PDFs and use the saved work time to prepare your dataset for publication!
