--- a/docs/50_data_publication/25_best_practice.mdx
+++ b/docs/50_data_publication/25_best_practice.mdx
@@ -22,25 +22,25 @@ During deposition of research data, a [persistent identifier](/docs/pid) is assi
 This distinction is important, because the link to the dataset in the DOI metadata of scientific articles is differently set, depending on whether the dataset is a directly related source of information or a referenced source of other researchers and its information is reused.
 :::
 
-For at set of reactions, samples, analyses, to assemble a study, Collection PIDs should be used rather than providing many separate PIDs. Such a study wrapped with a Collection PID can directly correspond to a published scientific article and be referenced in a bundled manner within the data availability statement or references section.
+For at set of reactions, samples, and analyses, to assemble a study, Collection PIDs should be used rather than providing many separate PIDs. Such a study wrapped with a Collection PID can directly correspond to a published scientific article and be referenced in a bundled manner within the data availability statement or references section.
 
 In addition, the PID of a related dataset could also be mentioned in the supplementary PDF, if such a document is generated.
 
 ## Best practices for field-specific repositories
 
-For field-specific repositories such as [Chemotion Repository](/docs/choose_repository/#chemotion-repository---repository-for-molecules-and-research-data) in combination with [Chemotion ELN](/docs/chemotion_eln), the data is collected along the scientific workflows, analytical data files are automatically converted to open formats, controlled vocabularies or ontologies are used to describe data, and analysis data is interconnected to reactions and samples, hence, chemical structures. The entire Chemotion package allows researchers to collect, analyse, process, store, and publish various types of analytical data attached to reactions and samples in one digital environment. FAIRification of data is mainly handled Chemotion. During the seamless export from the ELN into the repository, [persistent identifiers (DOIs)](/docs/pid) are assigned to the deposited data. Chemotion Repository [provides](https://www.chemotion.net/docs/repo/doi) DOIs for reactions, samples and analysis data. 
+For field-specific repositories such as [Chemotion Repository](/docs/choose_repository/#chemotion-repository---repository-for-molecules-and-research-data) in combination with [Chemotion ELN](/docs/chemotion_eln), the data is collected along the scientific workflows, analytical data files are automatically converted to open formats, controlled vocabularies or ontologies are used to describe data, and analysis data is interconnected to reactions and samples, hence, chemical structures. The entire Chemotion package allows researchers to collect, analyse, process, store, and publish various types of analytical data attached to reactions and samples in one [digital environment](/docs/smartlab). FAIRification of data is mainly handled by Chemotion. During the seamless export from the ELN into the repository, [persistent identifiers (DOIs)](/docs/pid) are assigned to the data deposited. Chemotion Repository [provides](https://www.chemotion.net/docs/repo/doi) DOIs for reactions, samples and analysis data. 
 
-Other field-specific repositories such as [CSD and ICSD](/docs/choose_repository/#csd-icsd---joint-ccdcfiz-access-structures-service), [Strenda DB](/docs/choose_repository/#strenda-db---repository-for-reporting-rnzymology-data), [SupraBank](/docs/choose_repository/#suprabank), [NOMAD](/docs/choose_repository/#nomad), and [Chemotion Repository](/docs/choose_repository/#chemotion-repository---repository-for-molecules-and-research-data), if used independently from Chemotion ELN, offer build in aggregation of structured along the submission workflows and alined with the [FAIR data principles](/docs/fair). This greatly eases [data publication](/docs/data_publication).
+Other field-specific repositories such as [CSD and ICSD](/docs/choose_repository/#csd-icsd---joint-ccdcfiz-access-structures-service), [Strenda DB](/docs/choose_repository/#strenda-db---repository-for-reporting-rnzymology-data), [SupraBank](/docs/choose_repository/#suprabank), [NOMAD](/docs/choose_repository/#nomad), and [Chemotion Repository](/docs/choose_repository/#chemotion-repository---repository-for-molecules-and-research-data), if used independently from Chemotion ELN, offer build in workflows for the aggregation of structured data along the submission pathways that are aligned with the [FAIR data principles](/docs/fair). This greatly eases [data publication](/docs/data_publication).
 
-Further aspects to consider are to provide rich metadata, which could be [Domain-independent](/docs/metadata/#domain-independent-metadata) metadata or [domain-specific](/docs/metadata/#domain-specific-metadata) metadata and should also include [provenance information](/docs/provenance), which previously would have typically been included in the supplemental PDF section on general information and protocols [Minimum information requirements](/docs/metadata/#minimum-information-standards-mi) as set by the chemistry community and followed in manuscripts and previously also in supplementary PDFs should be included.   
+Further aspects to consider are to provide rich metadata, which could be [domain-independent](/docs/metadata/#domain-independent-metadata) metadata or [domain-specific](/docs/metadata/#domain-specific-metadata) metadata, and should also include [provenance information](/docs/provenance), which previously would have been typically  included in the supplemental PDF section on general information and protocols. [Minimum information requirements](/docs/metadata/#minimum-information-standards-mi) should be followed, as set by the chemistry community, and implemented in articles and previously also in supplementary PDFs.   
 
 :::danger Notice:
-Are you asking yourself right now, "That's it?" Yes, that's it! As mentioned above, field specific repositories carry out much of the heavy lifting when it comes to FAIRification, while the digital smart lab environment even collects structured data directly along the scientific workflow.
+Are you asking yourself right now, "That's it?" Yes, that's it! As mentioned above, field specific repositories carry out much of the heavy lifting when it comes to FAIRification, while the digital smart lab environment even collects structured data directly along the scientific workflow to ease data publication.
 :::
 
 ### Best practice examples
 
-For a better understanding of how data publications are linked to related journal publications, the following examples including their data (open-access) can be viewed:
+For a better understanding of data publications in field-specific repositories and how this data could be linked to related journal publications, the following examples including their data can be accessed via the following Lead-by-Example pages:
 
 - in Chemotion Repository: [Modular Synthesis of New Pyrroloquinoline Quinone Derivatives](/docs/datasets/?doi=10.1055/s-0041-1738426)
 - in Chemotion Repository and CSD: [Modular Synthesis of trans‐A2B2‐Porphyrins with Terminal Esters: Systematically Extending the Scope of Linear Linkers for Porphyrin‐Based MOFs](/docs/datasets/?doi=10.1002/chem.202003885)
@@ -68,6 +68,8 @@ Does that sound like a lot of manual work? Avoid extra work by using a [smart la
 :::
 
 ### Best practice examples
+
+For a better understanding of data publications in generic repositories and how this data could be linked to related journal publications, the following examples including their data can be accessed via the following Lead-by-Example pages:
 
 - in RADAR4Chem: [Linderazulen aus einer invasiven Pflanze - Delphi und sein violettes Wunder](/docs/datasets/?doi=10.1002/ciuz.201900868)
 - in Zenodo: [A data et of 255,000 randomly selected and manually classified extracted ion chromatograms for evaluation of peak detection methods](/docs/datasets/?doi=10.3390/metabo10040162)
