feat: commented paragraph in smartlab

--- a/docs/50_data_publication/25_best_practice.mdx
+++ b/docs/50_data_publication/25_best_practice.mdx
@@ -28,7 +28,7 @@ In addition, the PID of a related dataset could also be mentioned in the supplem
 
 ## Best practices for field-specific repositories
 
-For field-specific repositories such as [Chemotion Repository](/docs/choose_repository/#chemotion-repository---repository-for-molecules-and-research-data) in combination with [Chemotion ELN](/docs/chemotion_eln), the data is collected along the scientific workflows, analytical data files are automatically converted to open formats, controlled vocabularies or ontologies are used to describe data, and analysis data is interconnected to reactions and samples, hence, chemical structures. The entire Chemotion package allows researchers to collect, analyse, process, store, and publish various types of analytical data attached to reactions and samples in one [digital environment](/docs/smartlab). FAIRification of data is mainly handled by Chemotion. During the seamless export from the ELN into the repository, [persistent identifiers (DOIs)](/docs/pid) are assigned to the data deposited. Chemotion Repository [provides](https://www.chemotion.net/docs/repo/doi) DOIs for reactions, samples and analysis data. 
+For field-specific repositories such as [Chemotion Repository](/docs/choose_repository/#chemotion-repository---repository-for-molecules-and-research-data) in combination with [Chemotion ELN](/docs/chemotion_eln), the data is collected along the scientific workflows, analytical data files are automatically converted to open formats, controlled vocabularies or ontologies are used to describe data, and analysis data is interconnected to reactions and samples, hence, chemical structures. The entire Chemotion package allows researchers to collect, analyse, process, store, and publish various types of analytical data attached to reactions and samples in one [digital environment](/docs/smartlab). FAIRification of data along this [data life cycle](/docs/data_life_cycle) is mainly handled by Chemotion. During the seamless export from the ELN into the repository, [persistent identifiers (DOIs)](/docs/pid) are assigned to the data deposited. Chemotion Repository [provides](https://www.chemotion.net/docs/repo/doi) DOIs for reactions, samples and analysis data. 
 
 Other field-specific repositories such as [CSD and ICSD](/docs/choose_repository/#csd-icsd---joint-ccdcfiz-access-structures-service), [Strenda DB](/docs/choose_repository/#strenda-db---repository-for-reporting-rnzymology-data), [SupraBank](/docs/choose_repository/#suprabank), [NOMAD](/docs/choose_repository/#nomad), and [Chemotion Repository](/docs/choose_repository/#chemotion-repository---repository-for-molecules-and-research-data), if used independently from Chemotion ELN, offer build in workflows for the aggregation of structured data along the submission pathways that are aligned with the [FAIR data principles](/docs/fair). This greatly eases [data publication](/docs/data_publication).
 
