--- a/docs/40_smartlab/00_smartlab.mdx
+++ b/docs/40_smartlab/00_smartlab.mdx
@@ -11,20 +11,11 @@ import useBaseUrl from '@docusaurus/useBaseUrl';
 
 ![smartlab_flow](/img/smartlab/smartlab_flow2.png)
 
-The term smart laboratory does not refer to a laboratory where tablets can be found in every corner. The smart lab represents a holistic approach to [data management](/docs/data_guide) in chemistry with seamless data flows. What does this mean? It means that all steps within a researcher's [workflow](/docs/domain_guide) across the [research data lifecycle](/docs/data_life_cycle) are interconnected in a digital way. The key difference to a [Laboratory Management System (LIMS)](https://en.wikipedia.org/wiki/Laboratory_information_management_system) is that the Smart Lab's main focus is the realisation of the [FAIR data principles](/docs/fair). For example, a researcher plans and [documents](/docs/data_documentation) their experiment in an [electronic lab notebook (ELN)](/docs/eln). Any experimental data from devices such as spectrometers are then directly ingested by the ELN via [Application Programming Interfaces (APIs)](https://en.wikipedia.org/wiki/API). 
+A smart lab represents a holistic approach to [data management](/docs/data_guide) in chemistry with seamless data flows. What does this mean? It means that all steps within a researcher's [workflow](/docs/domain_guide) across the [research data lifecycle](/docs/data_life_cycle) are interconnected in a digital way. The key difference to a [Laboratory Management System (LIMS)](https://en.wikipedia.org/wiki/Laboratory_information_management_system) is that the Smart Lab's main focus is the realisation of the [FAIR data principles](/docs/fair). For example, a researcher plans and [documents](/docs/data_documentation) their experiment in an [electronic lab notebook (ELN)](/docs/eln). Any experimental data from devices such as spectrometers are then directly ingested by the ELN via [Application Programming Interfaces (APIs)](https://en.wikipedia.org/wiki/API). 
 
 The ELN then ideally assigns all the necessary [metadata](/docs/metadata) automatically and appropriately for a corresponding workflow and converts proprietary [data formats](/docs/format_standards) to open data formats. The ELN structures the (meta)data and experimental descriptions in a meaningful and sustainable way which is both human- and machine-readable (e.g., via the use of [machine-readable chemical structures](/docs/machine-readable_chemical_structures). When the researcher chooses to [publish](/docs/data_publication) or [archive](/docs/data_storage) their data, it is then ingested seamlessly by a data [repository](/docs/repositories) or archive without much further work as the ELN has already appropriately prepared the dataset to meet a repository’s or archive’s [requirements](/docs//choose_repository). 
 
 In this section, key components of the smart lab will be introduced to you.
-
-<!--
-## Employing digital smart lab environments
-
-Over the past years, many new digital tools have been developed to support researchers in their RDM needs. The use of [electronic lab notebooks (ELNs)](/docs/eln) is essential to support scientists in their daily work to collected data in a structured way. By using an ELN for experiment planning and documentation, it is guaranteed that the data is directly digitally available. Best practice includes the use of an ELN that covers the entire [data life cycle](/docs/data_life_cycle)—starting with experiment planning, passing through data collection, processing, and analysis to publication and reuse. These software solutions form the basis for SmartLab environments.
-
-Researchers can perform their daily work in a single digital environment. Nevertheless, they may also chose other software to process analytical data and add this information to the corresponding ELN entry. If the ELN used is directly connected to a [repository](/docs/repositories), the structured data obtained can be directly transferred to a repository. This greatly eases [data publication](/docs/data_publication) and could also make the use of supplemental material, typically submitted as a PDF, obsolete in the near future.
-
-Generally, selecting an ELN and a repository—generic or field-specific—depends on the [chemical sub-domain](/docs/domain_guide). The combination of both enables effective [data storage and archiving](/docs/data_storage) in terms of internal databases and data publications for advanced collaboration and data reuse, and fulfils the data handling practices of the [data life cycle](/docs/data_life_cycle). Moreover, the storage of research data according to the FAIR principles is crucial for upcoming machine learning approaches or big data analyses. Comment Ti: Copied over from old bp article. --->
 
 ## Get started:
 
