--- a/docs/50_data_publication/25_best_practice.mdx
+++ b/docs/50_data_publication/25_best_practice.mdx
@@ -76,5 +76,15 @@ For a better understanding of data publications in generic repositories and how 
 - in RADAR: [Synthesis and biological evaluation of highly potent fungicidal deoxy-hygrophorones](/docs/datasets/?doi=10.3390/metabo10040162).
 - in DaRus: [Predictive design of ordered mesoporous silica with well-defined, ultra-large mesopores](/docs/tba).
 
+<!---
+## Best practice to publish NMR data
+
+tbd
+
+## Best practice on relation types of related identifiers
+
+tbd
+--->
+
 ----
 Main authors: [ORCID:0000-0003-4480-8661](https://orcid.org/0000-0003-4480-8661), [ORCID:0000-0002-6243-2840](https://orcid.org/0000-0002-6243-2840) and [ORCID:0000-0003-2060-842X](https://orcid.org/0000-0003-2060-842X)
