--- a/i18n/de/docusaurus-plugin-content-docs/current/50_data_publication/00_data_publication.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/50_data_publication/00_data_publication.mdx
@@ -4,14 +4,14 @@ slug: "/data_publication"
 id: "data_publication"
 ---
 
-# Data Publication
+# Datenpublikation
 
-<!-- image ideas? -->
+<!-- image ideas?-->
 
-In chemical research, we strive to share results with others, commonly through articles in renowned scientific journals. To be able to actually work with and build upon these results, however, the scientific community also requires the data that the results were based on. Publishing and therefore sharing these research data in a [FAIR](/docs/fair) manner by including, for example, [machine-readable chemical structures](/docs/machine-readable_chemical_structures), [standard data formats](/docs/format_standards), and rich [metadata](/docs/metadata) adds value to the research results and enables discovery and reuse. Data publication is essential in ensuring findings are transparent and reproducible.
+In der chemischen Forschung versuchen wir, unsere Ergebnisse mit anderen zu teilen, in der Regel durch Artikel in renommierten Fachzeitschriften. Um tatsächlich mit diesen Ergebnissen arbeiten und auf ihnen aufbauen zu können, benötigt die wissenschaftliche Gemeinschaft jedoch auch die Daten, auf denen die Ergebnisse basieren. Die Veröffentlichung und somit die gemeinsame Nutzung dieser Forschungsdaten auf [FAIRer](/docs/fair) Art und Weise, z. B. durch Einbeziehung von [maschinenlesbaren chemischen Strukturen](/docs/machine-readable_chemical_structures), [Standarddatenformaten](/docs/format_standards) und reichhaltigen [Metadaten](/docs/metadata), erhöht den Wert der Forschungsergebnisse und ermöglicht ihre Entdeckung und Wiederverwendung. Die Veröffentlichung von Daten ist wichtig, um sicherzustellen, dass die Ergebnisse transparent und reproduzierbar sind.
 
-[Research data repositories](/docs/repositories) serve as the primary method to publish research data, while [smart Lab](/docs/smartlab) solutions, such as the [Chemotion ELN], can offer built-in workflows to assist researchers in sharing their research data straight from the lab. <!-- or: straight from the ELN? --> Some data may warrant their own [data article](/docs/data_articles) to be published alongside the results. 
+[Forschungsdaten-Repositorien](/docs/repositories) dienen als primäre Methode zur Veröffentlichung von Forschungsdaten, während [smart Lab](/docs/smartlab)-Lösungen, wie das [Chemotion ELN], integrierte Workflows bieten können, um Forscher bei der gemeinsamen Nutzung ihrer Forschungsdaten direkt aus dem Labor zu unterstützen. <!-- oder: direkt aus dem ELN? --> Einige Daten können einen eigenen [Datenartikel](/docs/data_articles) rechtfertigen, der zusammen mit den Ergebnissen veröffentlicht wird. 
 
-A [Data Availability Statement](/docs/data_availability_statement) communicates how the data has been shared and how it can be accessed by others, ideally linking to the dataset via its [persistent identifier](/docs/identifiers). <!-- leave out "ideally"?--> This statement is typically included in the back matter of a published article. <!-- include more information on linking datasets to published artciles onc we have best practice examples (De Gruyter pilot)-->
+Eine [Datenverfügbarkeitserklärung](/docs/data_availability_statement) teilt mit, wie die Daten weitergegeben wurden und wie andere darauf zugreifen können, wobei idealerweise ein Link zum Datensatz über seinen [persistent identifier](/docs/identifiers) gesetzt wird. <!-- Lassen Sie das Wort "idealerweise" weg?--> Diese Erklärung ist normalerweise im Anhang eines veröffentlichten Artikels enthalten. <!-- mehr Informationen über die Verknüpfung von Datensätzen mit veröffentlichten Artikeln einfügen - wir haben Best-Practice-Beispiele (De Gruyter Pilot)-->
 
-NFDI4Chem features datasets published by researchers and also assists in publishing research data. To find our more, head to [Lead by Example](/docs/lbe-intro).
+NFDI4Chem bietet Datensätze, die von Forschern veröffentlicht wurden, und hilft auch bei der Veröffentlichung von Forschungsdaten. Weitere Informationen finden Sie unter [Lead by Example](/docs/lbe-intro).
